--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Oswald&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+
+html{
+    background-color: black;
     font-family: 'Oswald', sans-serif;
 }
 
 #container{
-    background-color: #e0e0d1;
-    width: 90%;
-    justify-content: center;  
+    background-color: #fff;
+    max-width: 1100px;
+    position: relative;
+    margin: 50px auto;
+    padding: 20px 40px;
+}
+.tittle{
+    display: flex;
+    justify-content: center;
+    font-size: 35px;
+}
+.subtittle{
+    display: flex;
+    justify-content: center;
+    font-style: italic;
+}
+.figure-image{
+    display: flex;
+    justify-content: center;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.container-biography{
+    padding: 25px 0px;
+    margin: 25px 0px;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+}
+
+.container-quote{
+    background-color: #ddd;
+    padding: 30px;
+}
+
+.container-quote blockquote{
+    font-size: 20px;
+    font-weight: bold;
+}
+.font-italic{
+    font-style: italic;
 }
